/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.google.devtools.mobileharness.infra.client.longrunningservice.controller;

import com.google.devtools.mobileharness.infra.client.longrunningservice.proto.SessionProto.SessionConfig;
import com.google.devtools.mobileharness.infra.client.longrunningservice.proto.SessionProto.SessionDetail;
import com.google.devtools.mobileharness.infra.client.longrunningservice.proto.SessionProto.SessionId;
import com.google.devtools.mobileharness.infra.client.longrunningservice.proto.SessionProto.SessionStatus;
import java.util.UUID;

/**
 * Creator for creating {@link SessionDetail} based on {@link SessionConfig} when a session is
 * submitted.
 */
public class SessionDetailCreator {

  public SessionDetail create(SessionConfig sessionConfig) {
    return SessionDetail.newBuilder()
        .setSessionId(SessionId.newBuilder().setId(UUID.randomUUID().toString()))
        .setSessionStatus(SessionStatus.SESSION_SUBMITTED)
        .setSessionConfig(sessionConfig)
        .build();
  }
}
